Ska börja lägga till bilder

--- a/inlhtmlcss2/styles/_header.scss
+++ b/inlhtmlcss2/styles/_header.scss
@@ -1,6 +1,6 @@
 .mainpic {
     box-sizing: border-box;
-    background-image: url("https://via.placeholder.com/150");
+    background-image: url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
