--- a/inlhtmlcss2/styles/style.css
+++ b/inlhtmlcss2/styles/style.css
@@ -161,7 +161,7 @@ a {
 .mainpic {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-image: url("https://via.placeholder.com/150");
+  background-image: url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
