La till bilder och text och har börjat lägga till variabler.

--- a/inlhtmlcss2/styles/_article-collage.scss
+++ b/inlhtmlcss2/styles/_article-collage.scss
@@ -25,6 +25,7 @@
     h4 {
         font-size: 1.5em;
         margin-top: 0;
+        color: #9d5c5f;
     @media (min-width: 1000px) {
         h4 {
             font-size: 2vw;
