--- a/inlhtmlcss2/styles/_footer.scss
+++ b/inlhtmlcss2/styles/_footer.scss
@@ -4,7 +4,8 @@ footer {
 }
 .navbarfoot {
     display:flex;
-    background-color: rgb(212, 209, 209);
+    background-color: $color--sitebackground-and-nav;
+    color: $color--text-1;
     min-width: 100%;
     justify-content: center;
     align-items: center;
