--- a/inlhtmlcss2/styles/_main.scss
+++ b/inlhtmlcss2/styles/_main.scss
@@ -3,7 +3,7 @@ body{
     font-family:'Poppins', sans-serif;
     font-size: 1em;
     max-width: 100%;
-    background-color: rgb(233, 233, 233);
+    background-color: $color--sitebackground-1
 }
 main {
     width: 100%;
@@ -23,14 +23,6 @@ p {
     text-align: center;
     padding: 0 4vw;
 
-}
-.button {
-    padding: 0.5vh 4vw;
-    font-weight: bold;
-    font-family: inherit;
-    font-size: 1em;
-    border: none;
-    background-color: rgb(199, 198, 198);
 }
 .gridpic {
     object-fit: cover;
