--- a/inlhtmlcss2/styles/style.css
+++ b/inlhtmlcss2/styles/style.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 1em;
   max-width: 100%;
-  background-color: #e9e9e9;
+  background-color: #fafafa;
 }
 
 main {
@@ -27,15 +27,6 @@ h3 {
 p {
   text-align: center;
   padding: 0 4vw;
-}
-
-.button {
-  padding: 0.5vh 4vw;
-  font-weight: bold;
-  font-family: inherit;
-  font-size: 1em;
-  border: none;
-  background-color: #c7c6c6;
 }
 
 .gridpic {
@@ -82,7 +73,7 @@ h4 {
   display: flex;
   margin-left: 0;
   top: 0;
-  background-color: #e9e9e9;
+  background-color: #394951;
   margin: 0;
   font-weight: bold;
   -webkit-box-align: center;
@@ -151,11 +142,18 @@ h4 {
   padding: 0.5em;
   font-weight: bold;
   padding-left: 3vw;
+  padding: 0.5vh 4vw;
+  font-weight: bold;
+  font-family: 'Unica One', cursive;
+  font-size: 26px;
+  border: none;
+  background-color: #394951;
+  color: #ff8673;
 }
 
 a {
   text-decoration: none;
-  color: inherit;
+  color: #eaddd9;
 }
 
 .mainpic {
@@ -208,9 +206,19 @@ a {
   }
 }
 
+.center p {
+  color: #f0f0f0;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 1.04;
+  letter-spacing: 0.92px;
+}
+
 h1 {
   font-size: 1.5em;
   margin: 0;
+  color: #ff8673;
+  letter-spacing: 1.92px;
 }
 
 @media (min-width: 420px) {
@@ -227,7 +235,7 @@ h1 {
 
 @media (min-width: 800px) {
   h1 {
-    font-size: 2.7em;
+    font-size: 52px;
   }
 }
 
@@ -236,6 +244,7 @@ h1 {
       flex-basis: 100%;
   text-align: center;
   padding-right: 4vw;
+  color: #9d5c5f;
 }
 
 .marg {
@@ -269,6 +278,10 @@ h1 {
   min-height: auto;
 }
 
+.half h3 {
+  color: #9d5c5f;
+}
+
 @media (min-width: 1200px) {
   .half {
     -webkit-box-sizing: border-box;
@@ -285,7 +298,9 @@ h1 {
 }
 
 .half p {
-  padding: 0;
+  padding: 0 5em 0 5em;
+  letter-spacing: 0.59px;
+  font-size: 16px;
 }
 
 div.half {
@@ -317,18 +332,19 @@ div.half {
 }
 
 h2 {
-  font-size: 2.3em;
+  font-size: 2.7em;
   margin-bottom: 0;
+  letter-spacing: 1.77px;
 }
 
 @media (min-width: 1000px) {
   h2 {
-    font-size: 2.5vw;
+    font-size: 2.7em;
   }
 }
 
 h3 {
-  font-size: 2em;
+  font-size: 2.5em;
   margin-top: 0;
 }
 
@@ -336,6 +352,8 @@ h3 {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   text-align: center;
+  color: #ff8673;
+  padding-bottom: 1em;
 }
 
 .flow {
@@ -348,11 +366,11 @@ h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: white;
+  background-color: #394951;
 }
 
 @media (min-width: 1000px) {
-  .flow .flow {
+  .flow {
     padding: 5% 10% 5% 10%;
   }
 }
@@ -373,6 +391,13 @@ h3 {
   .flow img {
     width: 165px;
     height: 165px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .flow img {
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -434,6 +459,7 @@ h3 {
 .collage-text h4 {
   font-size: 1.5em;
   margin-top: 0;
+  color: #9d5c5f;
 }
 
 @media (min-width: 1000px) {
@@ -516,7 +542,7 @@ h3 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   height: 850px;
-  background: white;
+  background-color: #394951;
   padding: 0;
 }
 
@@ -618,7 +644,7 @@ h3 {
   text-align: start;
   -ms-flex-item-align: start;
       align-self: flex-start;
-  padding: 0 9vw 0 1vw;
+  padding: 5em 9vw 0 1vw;
 }
 
 @media (min-width: 900px) {
@@ -629,18 +655,27 @@ h3 {
   }
 }
 
+.first-news-text h4 {
+  color: #ff8673;
+}
+
 .second-news-text {
   grid-area: second-text;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: start;
-  padding: 0 9vw 0 1vw;
+  padding: 0 9vw 5em 1vw;
+}
+
+.second-news-text h4 {
+  color: #ff8673;
 }
 
 .first-news-text p,
 .second-news-text p {
   text-align: start;
   padding: 0;
+  color: #fafafa;
 }
 
 .article-with-overlap {
@@ -779,7 +814,7 @@ h3 {
       -ms-grid-row-align: center;
       align-self: center;
   z-index: 2;
-  background: white;
+  background-color: #9aa5aa;
   padding: 15px;
   margin: -16em 2em;
 }
@@ -812,6 +847,7 @@ h3 {
 .overlap-text h4 {
   font-size: 1.5em;
   margin-top: 0;
+  color: #ffaf89;
 }
 
 @media (min-width: 900px) {
@@ -878,6 +914,12 @@ h3 {
   padding: 0;
 }
 
+.overlap-text p {
+  color: #ffffff;
+  line-height: 1.38;
+  letter-spacing: 0.59px;
+}
+
 footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -889,7 +931,8 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #d4d1d1;
+  background-color: #394951;
+  color: #ff8673;
   min-width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
