--- a/inlhtmlcss2/styles/_article-list.scss
+++ b/inlhtmlcss2/styles/_article-list.scss
@@ -34,13 +34,17 @@
         min-height: 30em;
     }
     p {
-        padding: 0 5em 0 5em;
+        
         letter-spacing: 0.59px;
-        font-size: 16px;
+        font-size: 1em;
+        @media (min-width: 1100px){
+            font-size: 20px;
+            padding: 0 5em 0 5em;
+        }
     }
 }
 div.half { 
-    padding: 2vw;
+    //padding: 2vw;
     @media (min-width: 1200px) {
     padding-top: 7em;
     }
@@ -55,8 +59,7 @@ div.half {
         }
 }
 h2 {
-    font-size: 2.7em;
-
+    font-size: 1.9em;
     margin-bottom: 0;
     letter-spacing: 1.77px;
     @media (min-width: 1000px){
@@ -64,7 +67,9 @@ h2 {
     }
 }
 h3 {
+    font-size: 1.6em;
+    @media (min-width: 1000px){
     font-size: 2.5em;
-    margin-top: 0;
+    }
 }
 
