--- a/inlhtmlcss2/styles/_headnav.scss
+++ b/inlhtmlcss2/styles/_headnav.scss
@@ -12,7 +12,7 @@
         flex-direction: row;
     }
 } 
-.navbarhead ul {
+.navbartop {
     display:flex;
     list-style: none;
     width: 100%;
@@ -25,8 +25,7 @@
         justify-content: flex-end;   
         padding-right: 1.5em;
     }
-}
-.navbarhead li {
+    &__item {
     padding-right: 4vw;
     @media (min-width: 500px){
         margin: 0 1.4em 0 1.4em;
@@ -34,20 +33,17 @@
     @media (min-width: 700px) {
         margin: 0;
     }
+    &--no-link {
+        text-decoration: none;
+        color: #eaddd9;
+    }
+}
 }
 .logo{
-    padding: 0.5em;
-    font-weight: bold;
-    padding-left: 3vw;
     padding: 0.5vh 4vw;
-    font-weight: bold;
     font-family: 'Unica One', cursive;
-    font-size: 26px;
     border: none;
     background-color: $color--sitebackground-and-nav;
-    color: $color--text-1;
+    @include text-styling ($color--text-1, normal, 26px);
 }
-a {
-    text-decoration: none;
-    color: #eaddd9;
-}
+
