--- a/inlhtmlcss2/styles/_headnav.scss
+++ b/inlhtmlcss2/styles/_headnav.scss
@@ -33,7 +33,7 @@
     @media (min-width: 700px) {
         margin: 0;
     }
-    &--no-link {
+    &--style-link {
         text-decoration: none;
         color: #eaddd9;
     }
