--- a/inlhtmlcss2/styles/_article-collage.scss
+++ b/inlhtmlcss2/styles/_article-collage.scss
@@ -11,41 +11,33 @@
     @media (min-width: 1500px) {
         min-height: 25em;
     }
-}
-.collage-text {
-    grid-area: text;
-    @extend %textproperties;
-    align-self: center;
-    width: 100%;
-    @media (min-width: 750px) {
-        width: 50%;
-    }
-    h4 {
-        @include text-styling( #9d5c5f, bold, 1.5em);
-        // font-size: 1.5em;
-        // margin-top: 0;
-        // color: #9d5c5f;
-    @media (min-width: 1000px) {
-        h4 {
-            font-size: 2vw;
+    &__text {
+        grid-area: text;
+        @extend %textproperties;
+        align-self: center;
+        width: 100%;
+        @media (min-width: 750px) {
+            width: 50%;
+        }
+        &--bigsize {
+            @include text-styling( #9d5c5f, bold, 1.5em);
+            text-align: start;
+            padding: 0;
+            @media (min-width: 1000px) {
+                font-size: 2vw;
+            }
+        }
+        &--textsize{
+            text-align: start;
+            padding: 0;
+            font-size: 1em;
+            @media (min-width: 1100px){
+                font-size: 20px;
+            }
         }
     }
 }
-}
-.collage-text p{
-    text-align: start;
-    padding: 0;
-    font-size: 1em;
-    @media (min-width: 1100px){
-        font-size: 20px;
-    }
-}
-
-.collage-text h4 {
-    text-align: start;
-    padding: 0;
-}
-.collage-pictures {
+.collage-pictures{
     display: grid;
     grid-template-columns: 1fr 1fr auto;
     grid-auto-rows: auto;
@@ -55,20 +47,20 @@
         width: 50%;
     }
     @media (min-width: 1000px) {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(3, 1fr);
     }
     
 }
-.collage-img1 {
+.collage-pictures__img1 {
     grid-row: 1;
     grid-column: 1;
 
 }
-.collage-img2 {
+.collage-pictures__img2 {
     grid-row: 1;
     grid-column: 2;
 }
-.collage-img3 {
+.collage-pictures__img3 {
     grid-row: 1 / 3;
     grid-column: 3 / 3;
     display: none;
@@ -76,7 +68,7 @@
         display: unset;
     }
 }   
-.collage-img4 {
+.collage-pictures__img4 {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
 }
