--- a/inlhtmlcss2/styles/_article-with-overlap.scss
+++ b/inlhtmlcss2/styles/_article-with-overlap.scss
@@ -7,7 +7,7 @@
     "g h"
     "overlap-text overlap-text"
     "j m";
-    grid-template-columns: 45% 45%;
+    grid-template-columns: repeat(2, 45%);
     grid-template-rows: 150px 100px 150px;
     @media (min-width: 400px){
         padding: 10% 2%;
@@ -28,11 +28,11 @@
     }
     @media (min-width: 1000px){
         grid-template-columns: 1fr 1fr 30% 1fr 1fr;
-        grid-template-rows: 150px 150px 150px;
+        grid-template-rows: repeat(3, 150px);
         }
     @media (min-width: 1400px){
         padding: 5%;
-        grid-template-rows: 200px 200px 200px;
+        grid-template-rows: repeat(3, 200px);
     }
     @media (min-width: 1700px){
         padding: 8%;
