--- a/inlhtmlcss2/styles/style.css
+++ b/inlhtmlcss2/styles/style.css
@@ -1,4 +1,4 @@
-.collage-text, .first-news-text, .second-news-text {
+.article-collage__text, .first-news-text, .second-news-text {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: start;
@@ -155,7 +155,7 @@ h4 {
   }
 }
 
-.navbartop__item--no-link {
+.navbartop__item--style-link {
   text-decoration: none;
   color: #eaddd9;
 }
@@ -394,15 +394,7 @@ h3 {
   }
 }
 
-.fulline2 {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  text-align: center;
-  color: #ff8673;
-  padding-bottom: 1em;
-}
-
-.flow {
+.flow-pictures {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -415,44 +407,52 @@ h3 {
   background-color: #394951;
 }
 
+.flow-pictures__fulline2 {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  text-align: center;
+  color: #ff8673;
+  padding-bottom: 1em;
+}
+
 @media (min-width: 1000px) {
-  .flow {
+  .flow-pictures {
     padding: 5% 10% 5% 10%;
   }
 }
 
-.flow img {
+.flow-pictures__picflow--picsize {
   width: 99px;
   height: 101px;
 }
 
 @media (min-width: 800px) {
-  .flow img {
+  .flow-pictures__picflow--picsize {
     width: 130px;
     height: 130px;
   }
 }
 
 @media (min-width: 1000px) {
-  .flow img {
+  .flow-pictures__picflow--picsize {
     width: 165px;
     height: 165px;
   }
 }
 
 @media (min-width: 1500px) {
-  .flow img {
+  .flow-pictures__picflow--picsize {
     width: 200px;
     height: 200px;
   }
 }
 
-.picflow {
+.flow-pictures__picflow {
   margin: 10px;
 }
 
 @media (min-width: 1000px) {
-  .picflow .picflow {
+  .flow-pictures__picflow .picflow {
     margin: 1vw;
   }
 }
@@ -484,7 +484,7 @@ h3 {
   }
 }
 
-.collage-text {
+.article-collage__text {
   grid-area: text;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -493,38 +493,35 @@ h3 {
 }
 
 @media (min-width: 750px) {
-  .collage-text {
+  .article-collage__text {
     width: 50%;
   }
 }
 
-.collage-text h4 {
+.article-collage__text--bigsize {
   color: #9d5c5f;
   font-weight: bold;
   font-size: 1.5em;
+  text-align: start;
+  padding: 0;
 }
 
 @media (min-width: 1000px) {
-  .collage-text h4 h4 {
+  .article-collage__text--bigsize {
     font-size: 2vw;
   }
 }
 
-.collage-text p {
+.article-collage__text--textsize {
   text-align: start;
   padding: 0;
   font-size: 1em;
 }
 
 @media (min-width: 1100px) {
-  .collage-text p {
+  .article-collage__text--textsize {
     font-size: 20px;
   }
-}
-
-.collage-text h4 {
-  text-align: start;
-  padding: 0;
 }
 
 .collage-pictures {
@@ -545,26 +542,26 @@ h3 {
 
 @media (min-width: 1000px) {
   .collage-pictures {
-    -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
   }
 }
 
-.collage-img1 {
+.collage-pictures__img1 {
   -ms-grid-row: 1;
   grid-row: 1;
   -ms-grid-column: 1;
   grid-column: 1;
 }
 
-.collage-img2 {
+.collage-pictures__img2 {
   -ms-grid-row: 1;
   grid-row: 1;
   -ms-grid-column: 2;
   grid-column: 2;
 }
 
-.collage-img3 {
+.collage-pictures__img3 {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
@@ -574,12 +571,12 @@ h3 {
 }
 
 @media (min-width: 1000px) {
-  .collage-img3 {
+  .collage-pictures__img3 {
     display: unset;
   }
 }
 
-.collage-img4 {
+.collage-pictures__img4 {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2 / 3;
@@ -740,8 +737,8 @@ h3 {
   grid-gap: 1.5em;
   margin: 5%;
       grid-template-areas: "g h" "overlap-text overlap-text" "j m";
-  -ms-grid-columns: 45% 45%;
-      grid-template-columns: 45% 45%;
+  -ms-grid-columns: (45%)[2];
+      grid-template-columns: repeat(2, 45%);
   -ms-grid-rows: 150px 100px 150px;
       grid-template-rows: 150px 100px 150px;
 }
@@ -774,16 +771,16 @@ h3 {
   .article-with-overlap {
     -ms-grid-columns: 1fr 1fr 30% 1fr 1fr;
         grid-template-columns: 1fr 1fr 30% 1fr 1fr;
-    -ms-grid-rows: 150px 150px 150px;
-        grid-template-rows: 150px 150px 150px;
+    -ms-grid-rows: (150px)[3];
+        grid-template-rows: repeat(3, 150px);
   }
 }
 
 @media (min-width: 1400px) {
   .article-with-overlap {
     padding: 5%;
-    -ms-grid-rows: 200px 200px 200px;
-        grid-template-rows: 200px 200px 200px;
+    -ms-grid-rows: (200px)[3];
+        grid-template-rows: repeat(3, 200px);
   }
 }
 
