--- a/inlhtmlcss2/styles/_article-list.scss
+++ b/inlhtmlcss2/styles/_article-list.scss
@@ -17,14 +17,13 @@
 }
 .half {
     box-sizing: border-box;
-    flex-basis: 80%;
-    max-width: 80%;
+    flex-basis: 100%;
+    max-width: 100%;
     margin: 0;
     min-height: auto;
     & h3 {
         color: #9d5c5f;
-    }
-    
+    }  
     @media (min-width: 1200px){
         box-sizing: border-box;
         flex-basis: 30%;
@@ -33,10 +32,10 @@
         flex-grow: 1;
         min-height: 30em;
     }
-    p {
-        
+    p {   
         letter-spacing: 0.59px;
         font-size: 1em;
+        padding: 0 5% 0 5%;
         @media (min-width: 1100px){
             font-size: 20px;
             padding: 0 5em 0 5em;
@@ -46,7 +45,8 @@
 div.half { 
     //padding: 2vw;
     @media (min-width: 1200px) {
-    padding-top: 7em;
+    padding: 7em 5% 0 5%;
+    
     }
 }
 .share img {
