--- a/inlhtmlcss2/styles/_article-with-overlap.scss
+++ b/inlhtmlcss2/styles/_article-with-overlap.scss
@@ -84,6 +84,10 @@
     background-color: #9aa5aa;
     padding: 15px;
     margin: -16em 2em;
+    transition: all 400ms ease-in-out;
+    &:hover {
+        transform: scale(1.1);
+    }
     @media (min-width: 600px) {
         margin: -16em 5em;
     }
