--- a/inlhtmlcss2/styles/_header.scss
+++ b/inlhtmlcss2/styles/_header.scss
@@ -1,6 +1,6 @@
 .mainpic {
     box-sizing: border-box;
-    background-image: url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
+    background-image: linear-gradient(to bottom, rgba(9, 12, 10, 0.52), rgba(9, 12, 10, 0.52)), url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -38,7 +38,7 @@
         letter-spacing: 0.59px;
         font-size: 1.1em;
         font-weight: bold;
-        line-height: 1.04;
+        line-height: 1.31;
         letter-spacing: 0.92px;
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
         @media (min-width: 1100px){
