--- a/inlhtmlcss2/styles/style.css
+++ b/inlhtmlcss2/styles/style.css
@@ -183,7 +183,8 @@ h4 {
 .mainpic {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-image: url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(9, 12, 10, 0.52)), to(rgba(9, 12, 10, 0.52))), url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
+  background-image: linear-gradient(to bottom, rgba(9, 12, 10, 0.52), rgba(9, 12, 10, 0.52)), url(../pics/philipp-kammerer-6-mxb-m-z-q-8-e-unsplash@3x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -252,7 +253,7 @@ h4 {
   letter-spacing: 0.59px;
   font-size: 1.1em;
   font-weight: bold;
-  line-height: 1.04;
+  line-height: 1.31;
   letter-spacing: 0.92px;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -519,7 +520,7 @@ h3 {
 .article-collage__text--bigsize {
   color: #9d5c5f;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.2em;
   text-align: start;
   padding: 0;
 }
@@ -661,7 +662,7 @@ h3 {
 .inner-container-news h4 {
   color: #ff8673;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.2em;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -914,7 +915,7 @@ h3 {
   margin-top: 0;
   color: #ffaf89;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 @media (min-width: 900px) {
