--- a/inlhtmlcss2/styles/_article-list.scss
+++ b/inlhtmlcss2/styles/_article-list.scss
@@ -43,9 +43,9 @@
     }
 }
 div.half { 
-    //padding: 2vw;
+    padding: 2vw;
     @media (min-width: 1200px) {
-    padding: 7em 5% 0 5%;
+    padding: 4em 5% 4em 5%;
     
     }
 }
