--- a/inlhtmlcss2/styles/_article-with-overlap.scss
+++ b/inlhtmlcss2/styles/_article-with-overlap.scss
@@ -103,11 +103,10 @@
     } 
     h4 {
         margin-top: 0;
+        margin-bottom: 2%;
         @include text-styling ( #ffaf89, bold, 1.2em);
     @media (min-width: 900px) {
-        h4 {
             font-size: 2vw;
-        }
     }
     }
 
