--- a/inlhtmlcss2/styles/_news-about-us.scss
+++ b/inlhtmlcss2/styles/_news-about-us.scss
@@ -38,12 +38,11 @@
         margin-top: 0;
         margin-bottom: 0;
         @media (min-width: 900px) {
-        h4 {
-            font-size: 2em;
-        }
+            font-size: 2vw;
     }
 }
 }
+
 .newspicWrapper {
   grid-area: picture;
   position: relative;
